--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "typescript": "^5.1.3"
   },
   "jest": {
+    "testTimeout": 5000,
     "moduleFileExtensions": [
       "js",
       "json",
